--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,8 @@
 {
   "name": "not_trending",
-  "version": "1.0",
   "description": "Hides Twitter's 'Trend's For You' Pane.",
-  "page_action": {
-    "default_icon": {
-      "128": "images/logo128.png"
-    }
-  },
+  "author": "M. Edward Pierce",
+  "version": "1.0",
   "content_scripts": [{
     "css": ["css.css"],
     "matches": ["https://twitter.com/*"]
